--- a/resources/waystoneStyles.css
+++ b/resources/waystoneStyles.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css?family=Nanum+Myeongjo');
-@import url('https://fonts.googleapis.com/css?family=Noto+Serif');
 * {
 	margin: 0;
 	padding: 0;
@@ -51,7 +50,7 @@ nav ul li {
 	height: 100%;
 	width: 33.33%;
 	font-size: 20px;
-	font-family: "Noto Serrif";
+	font-family: "Marriweather";
 	letter-spacing: 1px;
 	position: relative;
 	background-color: none;
@@ -136,7 +135,7 @@ nav ul li {
 	width: 50%;
 	height: 100%;
 	float: left;
-	font-family: "Noto Serrif";
+	font-family: "Merriweather";
 	position: relative;
 	display: flex;
 	align-items: center;
@@ -153,7 +152,7 @@ nav ul li {
 /* Home */
 .contentPannel {
 	width: 100%;
-	height: 600px;
+	height: 700px;
 	position: relative;
 }
 .MS-Wrapper {
@@ -190,7 +189,7 @@ nav ul li {
 	background: rgba(255,255,255,.7);
 	border: 5px solid #FFF;
 	position: absolute;
-	font-family: "Nanum Myeongjo";
+	font-family: "Merriweather";
 }
 .subtitle {
 	margin-top: 5%;
@@ -201,6 +200,7 @@ nav ul li {
 	font-size: 70px;
 	padding: 20px 40px;
 	letter-spacing: 15px;
+	font-family: "Nanum Myeongjo";
 }
 .loginDesc {
 	max-width: 50%;
@@ -208,6 +208,37 @@ nav ul li {
 	margin-left: 5%;
 	margin-top: 16%;
 	font-size: 25px;
+	line-height: 35px;
+}
+.loginSignupButton:hover {
+	letter-spacing: 4px;
+	background: rgba(255,255,255,1);
+}
+.loginSignupButton {
+	margin-left: 68%;
+	margin-top: 17%;
+	font-size: 40px;
+	padding: 25px;
+	letter-spacing: 2px;
+	background: rgba(255,255,255,.7);
+	font-family: "Nanum Myeongjo";
+	transition: .5s all;
+}
+.cityTitle {
+	font-size: 70px;
+	letter-spacing: 10px;
+	margin-top: 50px;
+	padding: 20px 200px;
+	font-family: "Nanum Myeongjo";
+}
+.cityDesc {
+	font-size: 17px;
+	margin-top: 225px;
+	right: 0;
+	max-width: 70%;
+	padding: 20px;
+	line-height: 40px;
+	background: rgba(255,255,255,.85);
 }
 /* footer */
 footer {
@@ -275,6 +306,13 @@ footer {
 	}
 	.contentPannel {
 		height: 500px;
+	}
+	.loginSignupButton {
+		font-size: 30px;
+		margin-left: 65%;
+	}
+	.loginDesc {
+		font-size: 20px;
 	}
 }
 /* Utilities */
