employee can edit database info

--- a/EmployeeLogin/web/templates/commonTemplate.xhtml
+++ b/EmployeeLogin/web/templates/commonTemplate.xhtml
@@ -9,7 +9,11 @@
 
     <h:head>
 	<h:outputStylesheet name="waystoneEmployee.css" library="css" />
-        <h:outputScript library="js" name="waystoneEmp.js"/>
+        <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"/>
+            
+        <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+        <h:outputScript name="js/waystoneEmp.js"/>
     </h:head>
 
     <h:body>
