--- a/EmployeeLogin/web/templates/header.xhtml
+++ b/EmployeeLogin/web/templates/header.xhtml
@@ -10,7 +10,7 @@
     <h:body>
 	    <ui:composition>
                 <h:form>
-                    <div id="signOut"> <h:commandLink action="#{login.logout}" value="Sign Out"></h:commandLink></div>
+                    <div id="signOut"> <h:commandLink action="#{employee.logout}" value="Sign Out" class="link"></h:commandLink></div>
                     <div class="title">Waystone Property Management</div>
                     
                     <div id="nav">
