--- a/EmployeeLogin/web/resources/css/waystoneEmployee.css
+++ b/EmployeeLogin/web/resources/css/waystoneEmployee.css
@@ -44,13 +44,13 @@ div ul {
     text-align: right;
     
 }
-#loginBox {
+.shadowBox {
     font-family: "Noto Serif";
     border: 10px dimgray;
     background-color: ghostwhite;
     padding: 50px;
     margin: 100px;
-    width: 30%;
+    width: 33%;
     position: relative;
     -moz-box-shadow: 1px 2px 4px rgba(0, 0, 0,0.5);
     -webkit-box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
@@ -59,7 +59,8 @@ div ul {
     margin-left: auto;
     margin-right: auto;
 }
-#loginBox h3{
+
+.shadowBox h3{
     padding-top: -50px;
     padding-bottom: 20px;
 }
