--- a/EmployeeLogin/web/resources/css/waystoneEmployee.css
+++ b/EmployeeLogin/web/resources/css/waystoneEmployee.css
@@ -30,7 +30,7 @@
 
 div li {
 	display: inline;
-	padding-right: 100px;
+	padding-right: 20px;
 }
 .link:hover {
         color: lightslategray;
@@ -64,6 +64,23 @@ div ul {
     padding-top: -50px;
     padding-bottom: 20px;
 }
+
+#editBox {
+    font-family: "Noto Serif";
+    border: 10px dimgray;
+    background-color: ghostwhite;
+    padding: 50px;
+    margin: 100px;
+    width: 50%;
+    position: relative;
+    -moz-box-shadow: 1px 2px 4px rgba(0, 0, 0,0.5);
+    -webkit-box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .empInfo {
     font-family:"Noto Serif";
     position:relative;
