--- a/EmployeeLogin/web/templates/header.xhtml
+++ b/EmployeeLogin/web/templates/header.xhtml
@@ -15,14 +15,14 @@
                     
                     <div id="nav">
                         <ul>
-                            <li><h:link value="Home" outcome="employeeAdmin" class="link" /></li>
-                            <li><h:link value="My Profile" outcome="employeeProfile" class="link" /></li>
-                            <li><h:link value="Paystub" outcome="paystub" class="link"/></li>
-                            <li><h:link value="Timesheet" outcome="timesheet" class="link"/></li>
-                            <li><h:link value="Tenant Accounts" outcome="tenantAccounts" class="link"/></li>
-                            <li><h:link value="Maintenance Requests" outcome="maintenanceRequests" class="link"/></li>
-                            <li><h:link value="Training Materials" outcome="training" class="link"/></li>
-                            <li><h:link value="Additional Company Information" outcome="companyInfo" class="link"/></li>
+                            <li class="navList"><h:link value="Home" outcome="employeeAdmin" class="link" /></li>
+                            <li class="navList"><h:link value="My Profile" outcome="employeeProfile" class="link" /></li>
+                            <li class="navList"><h:link value="Paystub" outcome="paystub" class="link"/></li>
+                            <li class="navList"><h:link value="Timesheet" outcome="timesheet" class="link"/></li>
+                            <li class="navList"><h:link value="Tenant Accounts" outcome="tenantAccounts" class="link"/></li>
+                            <li class="navList"><h:link value="Maintenance Requests" outcome="maintenanceRequests" class="link"/></li>
+                            <li class="navList"><h:link value="Training Materials" outcome="training" class="link"/></li>
+                            <li class="navList"><h:link value="Additional Company Information" outcome="companyInfo" class="link"/></li>
                         </ul>
                     </div>
                     
