--- a/EmployeeLogin/web/resources/css/waystoneEmployee.css
+++ b/EmployeeLogin/web/resources/css/waystoneEmployee.css
@@ -93,7 +93,7 @@ div ul {
     padding-bottom: 20px;
 }
 
-#editBox {
+.editBox {
     font-family: "Noto Serif";
     border: 10px dimgray;
     background-color: ghostwhite;
@@ -105,6 +105,9 @@ div ul {
     box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
     text-align: center;
     margin: 0 auto;
+}
+#editPass{
+    width:33%;
 }
 
 .empInfo {
@@ -135,4 +138,9 @@ div ul {
 .quickLink {
     text-align:center;
     margin:0 auto;
+}
+.warning {
+    text-align: left;
+    font-size: 0.8em;
+    color:red;
 }
