--- a/EmployeeLogin/web/templates/commonTemplate.xhtml
+++ b/EmployeeLogin/web/templates/commonTemplate.xhtml
@@ -9,6 +9,7 @@
 
     <h:head>
 	<h:outputStylesheet name="waystoneEmployee.css" library="css" />
+        <link rel="icon" type ="image/x-icon" href="#{resource['images/Way1.png']}"/>
         <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"/>
             
         <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
