--- a/EmployeeLogin/web/resources/css/waystoneEmployee.css
+++ b/EmployeeLogin/web/resources/css/waystoneEmployee.css
@@ -164,6 +164,14 @@ div ul {
     background: none repeat scroll 0 0 #F9F9F9;
     border-top: 1px solid #BBBBBB;
 }
+.table-link{
+    color:black;
+    text-decoration:none;
+}
+.table-link:hover{
+    color: lightslategray;
+    text-decoration: none;
+}
 .dropdown-content {
     display: none;
     position:absolute;
