can create and edit tenants

--- a/EmployeeLogin/web/templates/header.xhtml
+++ b/EmployeeLogin/web/templates/header.xhtml
@@ -19,13 +19,14 @@
                             <li class="navList"><h:link value="Home" outcome="employeeAdmin" class="link" /></li>
                             <li class="navList"><h:link value="My Profile" outcome="employeeProfile" class="link" /></li>
                             <li class="navList"><h:link value="Paystub" outcome="paystub" class="link"/></li>
-                            <li class="navList"><h:link value="Timesheet" outcome="timesheet" class="link"/></li>
+                            <li class="navList"><h:link value="Units" outcome="units" class="link"/></li>
                             <li class="navList">
                                 <div class="dropdown">
                                     <h:link value="Tenant Accounts" outcome="tenantAccounts" class="link" id="dropbtn"/>
                                         <div class="dropdown-content">
                                             
                                                 <h:link value="Tenant Search" outcome="tenantAccounts" class="content"/><br/>
+                                                <h:link value="Create New Tenant" outcome="insertTenant" class="content"/><br/>
                                                 <h:link value="Tenant Payments" outcome="tenantPayments" class="content"/>
                                             
                                         </div>    
