--- a/EmployeeLogin/web/resources/css/waystoneEmployee.css
+++ b/EmployeeLogin/web/resources/css/waystoneEmployee.css
@@ -179,6 +179,8 @@ div ul {
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index:1;  
     text-align:center;
+    width: 150px;
+    max-width:200px;
 }
 .dropdown:hover .dropdown-content{
     display:block;
@@ -198,4 +200,5 @@ div ul {
     position:relative;
     display:inline-block;
     text-decoration:none;
+    
 }
