--- a/EmployeeLogin/web/templates/header.xhtml
+++ b/EmployeeLogin/web/templates/header.xhtml
@@ -18,17 +18,36 @@
                         <ul>
                             <li class="navList"><h:link value="Home" outcome="employeeAdmin" class="link" /></li>
                             <li class="navList"><h:link value="My Profile" outcome="employeeProfile" class="link" /></li>
-                            <li class="navList"><h:link value="Paystub" outcome="paystub" class="link"/></li>
-                            <li class="navList"><h:link value="Units" outcome="units" class="link"/></li>
+                            <li class="navList">
+                                <div class="dropdown">
+                                    <h:link value="Company Accounts" outcome="accounts" class="link"/>
+                                        <div class="dropdown-content">
+                                            
+                                                <h:link value="Accounts" outcome="accounts" class="content"/><br/>
+                                                <h:link value="Create New Account" outcome="createAccount" class="content"/>
+                                                                                            
+                                        </div>    
+                                </div>
+                            </li>
+                            <li class="navList">
+                                <div class="dropdown">
+                                    <h:link value="Units" outcome="units" class="link" />
+                                        <div class="dropdown-content">
+                                            
+                                                <h:link value="Unit Search" outcome="units" class="content"/><br/>
+                                                <h:link value="Create New Unit" outcome="createUnit" class="content"/>
+                                                                                            
+                                        </div>    
+                                </div>
+                            </li>
                             <li class="navList">
                                 <div class="dropdown">
                                     <h:link value="Tenant Accounts" outcome="tenantAccounts" class="link" id="dropbtn"/>
                                         <div class="dropdown-content">
                                             
                                                 <h:link value="Tenant Search" outcome="tenantAccounts" class="content"/><br/>
-                                                <h:link value="Create New Tenant" outcome="insertTenant" class="content"/><br/>
-                                                <h:link value="Tenant Payments" outcome="tenantPayments" class="content"/>
-                                            
+                                                <h:link value="Create New Tenant" outcome="insertTenant" class="content"/>                                
+                                           
                                         </div>    
                                 </div>
                             </li>    
