--- a/EmployeeLogin/web/templates/header.xhtml
+++ b/EmployeeLogin/web/templates/header.xhtml
@@ -42,7 +42,7 @@
                             </li>
                             <li class="navList">
                                 <div class="dropdown">
-                                    <h:link value="Tenant Accounts" outcome="tenantAccounts" class="link" id="dropbtn"/>
+                                    <h:link value="Tenant Accounts" outcome="tenantAccounts" class="link"/>
                                         <div class="dropdown-content">
                                             
                                                 <h:link value="Tenant Search" outcome="tenantAccounts" class="content"/><br/>
@@ -57,6 +57,59 @@
                         </ul>
                     </div>
                     
+                    
+                   <!--  
+                    <div class="primary_nav_wrap">
+                    
+                    		<div class="dropdownMenu"> Menu
+                    			<div class="dropdown-contentMenu">
+                    			<ul>
+                    			
+                            		<li class="contentMenu"><h:link value="Home" outcome="employeeAdmin" class="linkMenu" /></li>
+                            		<li class="contentMenu"><h:link value="My Profile" outcome="employeeProfile" class="link" /></li>
+                            		<li class="contentMenu">
+                                		
+                                    		<h:link value="Company Accounts" outcome="accounts" class="linkMenu"/>
+                                        		<ul class="menu-dropdown-content">
+                                            
+                                                		<li><h:link value="Accounts" outcome="accounts" class="inner-content"/></li>
+                                                		<li><h:link value="Create New Account" outcome="createAccount" class="inner-content"/></li>
+                                                                                            
+                                        		</ul>    
+                                		
+                            		</li>
+                            		<li class="contentMenu">
+                                		
+                                    		<h:link value="Units" outcome="units" class="linkMenu" />
+                                        		<ul class="menu-dropdown-content">
+                                            
+                                               		 <li><h:link value="Unit Search" outcome="units" class="inner-content"/></li>
+                                                	 <li><h:link value="Create New Unit" outcome="createUnit" class="inner-content"/></li>
+                                                                                            
+                                        		</ul>    
+                                		
+                            		</li>
+                           		<li class="contentMenu">
+                               		 
+                                    		<h:link value="Tenant Accounts" outcome="tenantAccounts" class="linkMenu"/>
+                                       		 <ul class="menu-dropdown-content">
+                                            
+                                               		 <li><h:link value="Tenant Search" outcome="tenantAccounts" class="inner-content"/></li>
+                                                	 <li><h:link value="Create New Tenant" outcome="insertTenant" class="inner-content"/></li>                                
+                                           
+                                        		</ul>    
+                               		
+                            		</li>    
+                            		<li class="contentMenu"><h:link value="Maintenance Requests" outcome="maintenanceRequests" class="linkMenu"/></li>
+                            		<li class="contentMenu"><h:link value="Training Materials" outcome="training" class="linkMenu"/></li>
+                            		<li class="contentMenu"><h:link value="Additional Company Information" outcome="companyInfo" class="linkMenu"/></li>
+                            
+                        	</ul>
+                        	</div>
+                        </div>
+                        
+                    </div>
+                    --> 
                     
                 </h:form>
 
