--- a/EmployeeLogin/web/resources/css/waystoneEmployee.css
+++ b/EmployeeLogin/web/resources/css/waystoneEmployee.css
@@ -6,6 +6,13 @@
 
 @import url('https://fonts.googleapis.com/css?family=Nanum+Myeongjo');
 @import url('https://fonts.googleapis.com/css?family=Noto+Serif');
+
+html body{
+	margin: 0;
+	padding: 0;
+}
+
+
 .title {
 	font-size: 2em;
 	color: black;
@@ -13,6 +20,12 @@
 	font-family:"Nanum Myeongjo";
 	position:relative;
 	margin:auto;
+}
+.topHeader{
+	background-color: rgba(255,255,255,1);
+	margin: 0;
+	padding: 0;
+	
 }
 #nav {
 	background-color: rgba(255,255,255,1);
@@ -288,7 +301,7 @@ div ul {
 .shadowBox {
     font-family: "Noto Serif";
     border: 10px dimgray;
-    background-color: ghostwhite;
+    background-color: rgba(255,255,255,1);
     padding: 50px;
     margin: 100px;
     width: 33%;
@@ -310,7 +323,7 @@ div ul {
 .editBox {
     font-family: "Noto Serif";
     border: 10px dimgray;
-    background-color: ghostwhite;
+    background-color: rgba(255,255,255,1);
     padding: 50px;
     width: 50%;
     position: relative;
@@ -358,26 +371,30 @@ div ul {
 .table{
     border-collapse:collapse;
     margin: 0 auto;
+    border:1px solid #BBBBBB;
 }
 .table-header{
     text-align:center;
-    background:none repeat scroll 0 0 #E5E5E5;
+    background:none repeat scroll 0 0 rgba(255,255,255,1);
     border-bottom: 1px solid #BBBBBB;
     padding: 16px;
 }
 .table-odd{
     text-align: center;
-    background: none repeat scroll 0 0 #FFFFFF;
+    background: none repeat scroll 0 0 #D0E2F5;  
     border-top: 1px solid #BBBBBB;
     padding-left: 10px;
 }
 .table-even{
     text-align: center;
-    background: none repeat scroll 0 0 #F9F9F9;
+    background: none repeat scroll 0 0 rgba(255,255,255,1);
     border-top: 1px solid #BBBBBB;
     padding-left: 10px;
 }
 .name{
+	text-align:left !important;
+}
+.recordNum{
 	text-align:left !important;
 }
 .building{
@@ -419,7 +436,7 @@ div ul {
 .dropdown-content {
     display: none;
     position:absolute;
-    background-color: ghostwhite;
+    background-color: rgba(255,255,255,1);
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index:1;  
     text-align:left;
@@ -464,6 +481,12 @@ div ul {
 }
 #loginBackground {
 	
-	background-image:url("images/bluebuilding.jpeg");
+	background-image:url("images/bluebuildinglighter.png");
 	background-size: cover;
+	
+    
+}
+.intranetBack{
+	background-image:url("images/bluebuildinglighter.png");
+	background-size:cover;
 }
