--- a/EmployeeLogin/web/templates/commonTemplate.xhtml
+++ b/EmployeeLogin/web/templates/commonTemplate.xhtml
@@ -17,7 +17,7 @@
         <h:outputScript name="js/waystoneEmp.js"/>
     </h:head>
 
-    <h:body>
+    <h:body class="intranetBack">
 
 	<div id="page">
 
