--- a/resources/waystoneStyles.css
+++ b/resources/waystoneStyles.css
@@ -1,9 +1,31 @@
-@import url('https://fonts.googleapis.com/css?family=Nanum+Myeongjo');
+/* Variables and starter declarations */
+:root {
+	--dark-blue: #0a0e2b;
+	--p-font: "Marriweather";
+	--title-font: "Nanum Myeongjo";
+	--green: #008c07;
+}
 * {
 	margin: 0;
 	padding: 0;
 	list-style: none;
+	text-decoration: none;
 }
+input:focus {
+	border-color: #9ecaed;
+	box-shadow:0 0 10px #9ecaed;
+}
+input:hover {
+	border-color: #9ecaed;
+}
+input {
+	background: white;
+	border: 1px solid var(--dark-blue);
+	font-family: var(--p-font);
+	box-shadow: none;
+	padding: 5px 10px;
+}
+/* header */
 header {
 	width: 100%;
 	height: 100px;
@@ -40,7 +62,8 @@ nav ul {
 	width: 100%;
 }
 nav ul li:active {
-	background-color: #275cb2;
+	background-color: var(--dark-blue);
+	color: #FFF;
 }
 nav ul li:hover {
 	letter-spacing: 2px;
@@ -50,7 +73,7 @@ nav ul li {
 	height: 100%;
 	width: 33.33%;
 	font-size: 20px;
-	font-family: "Marriweather";
+	font-family: var(--p-font);
 	letter-spacing: 1px;
 	position: relative;
 	background-color: none;
@@ -58,13 +81,13 @@ nav ul li {
 	justify-content: center;
 	align-items: center;
 	background: none;
-	transition: .5s letter-spacing, .2s background-color;
+	transition: .5s letter-spacing;
 }
 .titleContainer:hover {
 	letter-spacing: 5px;
 }
 .titleContainer {
-	font-family: "Nanum Myeongjo";
+	font-family: var(--title-font);
 	width: 50%;
 	height: 100%;
 	float: left;
@@ -91,7 +114,7 @@ nav ul li {
   height: 4px;
   content: '';
   bottom: 0px;
-	background: #275cb2;
+	background: var(--dark-blue);
 	transition: .75s all;
 }
 .titleContainer .title:after {
@@ -102,7 +125,7 @@ nav ul li {
   height: 4px;
   content: '';
   bottom: 0px;
-	background: #275cb2;
+	background: var(--dark-blue);
 	transition: .75s all;
 }
 .logSignWrapper {
@@ -126,7 +149,8 @@ nav ul li {
 	margin: 0 auto;
 }
 .logSignContainer>div:active {
-	background-color: #275cb2;
+	background-color: var(--dark-blue);
+	color: #FFF;
 }
 .logSignContainer>div:hover {
 	letter-spacing: 2px;
@@ -135,7 +159,7 @@ nav ul li {
 	width: 50%;
 	height: 100%;
 	float: left;
-	font-family: "Merriweather";
+	font-family: var(--p-font);
 	position: relative;
 	display: flex;
 	align-items: center;
@@ -143,7 +167,7 @@ nav ul li {
 	font-size: 20px;
 	letter-spacing: 1px;
 	background-color: none;
-	transition: .5s letter-spacing, .2s background-color;
+	transition: .5s letter-spacing;
 }
 .bodyWhitespace {
 	width: 100%;
@@ -154,6 +178,7 @@ nav ul li {
 	width: 100%;
 	height: 700px;
 	position: relative;
+	color: var(--dark-blue);
 }
 .MS-Wrapper {
 	background: url("../images/miami-road.jpg") no-repeat 100%;
@@ -187,66 +212,422 @@ nav ul li {
 }
 .contentPannelItem {
 	background: rgba(255,255,255,.5);
-	border: 5px solid #FFF;
+	border: 5px solid var(--dark-blue);
 	position: absolute;
-	font-family: "Merriweather";
+	font-family: var(--p-font);
 }
-.logo {
-	background: url("../images/LOGO.PNG") no-repeat 100%;
-	background-size: 100% 100%;
-	width: 100px;
-	height: 75px;
-
-}
-.subtitle {
-	background: rgba(255,255,255,.5);
-	margin-top: 5%;
-	margin-left: 5%;
+.subtitleWrapper {
+	width: 100%;
+	height: 35%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+}
+.subtitle {
+	border-bottom: var(--dark-blue) solid 5px;
+	background: rgba(255,255,255,.5);
+	font-weight: bolder;
+	text-align: center;
+	margin: 0 auto;
 	font-size: 70px;
-	padding: 20px 40px;
+	height: 100px;
+	padding: 0 50px;
 	letter-spacing: 15px;
-	font-family: "Nanum Myeongjo";
+	font-family: var(--title-font);
+	position: relative;
+	line-height: 100px;
+	z-index: 1;
+}
+.loginInfoWrapper {
+	width: 100%;
+	height: 65%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.loginInfoContainer {
+	width: 100%;
+	height: 70%;
+	margin-top: 100px;
 }
 .loginDesc {
-	max-width: 50%;
+	max-width: 40%;
 	padding: 30px;
-	margin-left: 5%;
-	margin-top: 16%;
-	font-size: 25px;
+	font-size: 28px;
 	line-height: 35px;
+	background: rgba(255,255,255,.5);
+	border-bottom: 5px solid var(--dark-blue);
+	float: left;
+	font-family: var(--p-font);
+	font-weight: bold;
+	margin-left: 300px;
 }
 .loginSignupButton:hover {
 	letter-spacing: 4px;
-	background: rgba(255,255,255,1);
+	background: rgba(10,14,43,.85);
+	color: #FFF;
 }
 .loginSignupButton {
-	margin-left: 68%;
-	margin-top: 17%;
+	float: left;
+	position: relative;
 	font-size: 40px;
 	padding: 25px;
 	letter-spacing: 2px;
-	background: rgba(255,255,255,.5);
-	font-family: "Nanum Myeongjo";
+	background: rgba(255,255,255,.85);
+	border: 5px solid var(--dark-blue);
+	font-family: var(--title-font);
+	margin-left: 50px;
 	transition: .5s all;
 }
+.cityWrapper {
+	display: flex;
+	align-items: center;
+}
+.cityInfoContainer {
+	width: 100%;
+	height: 480px;
+}
+.cityTitleContainer {
+	width: 100%;
+	height: 131px;
+}
 .cityTitle {
+	position: relative;
+	width: 700px;
+	height: 100%;
+	text-align: center;
 	font-size: 70px;
 	letter-spacing: 10px;
-	margin-top: 50px;
-	padding: 20px 200px;
-	font-family: "Nanum Myeongjo";
+	line-height: 131px;
+	font-family: var(--title-font);
+	border-left: 0;
 }
 .cityDesc {
-	font-size: 17px;
-	margin-top: 225px;
+	margin-top: 90px;
+	font-size: 18px;
 	right: 0;
-	max-width: 70%;
-	padding: 20px;
+	max-width: 50%;
+	padding: 50px;
 	line-height: 40px;
-	background: rgba(255,255,255,.85);
+	color: #FFF;
+	background: rgba(10,14,43,.85);
+	border-right: 0;
+}
+/* All subpages */
+.pageTitle p {
+	font-weight: bolder;
+	font-size: 80px;
+	letter-spacing: 15px;
+	font-family: var(--title-font);
+	position: relative;
+	padding: 0 20px;
+}
+.pageTitle {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	color: var(--dark-blue);
+	width: 100%;
+	height: 25%;
+}
+.pageTitle p::before {
+	content: '';
+	height: 5px;
+	width: 120%;
+	background-color: var(--dark-blue);
+	position: absolute;
+	bottom: 0;
+	left: -10%;
+}
+/* Contact */
+.contactPannel {
+	background-color: #ededed;
+}
+.contactFormPannelBackground {
+	background: url("../images/miami-beach-blur.png") 100% no-repeat;
+	background-size: 100%;
+	background-attachment: fixed;
+	width: 100%;
+	height: 775px;
+}
+.contactFormPannel {
+	width: 90%;
+	height: 700px;
+	margin: 0 auto;
+	background-color: #ededed;
+}
+.contactForm {
+	width: 80%;
+	padding: 50px 0;
+	margin: 0 auto;
+}
+.contactForm p {
+	font-size: 18px;
+	font-family: var(--p-font);
+}
+.contactForm input[type=text], .contactForm input[type=email] {
+	width: 300px;
+	height: 40px;
+	font-size: 18px;
+	color: var(--dark-blue);
+	letter-spacing: 2px;
+	margin-left: 50px;
+	transition: all .25s;
+}
+.contactForm textarea:focus {
+	border-color: #9ecaed;
+	box-shadow:0 0 10px #9ecaed;
+}
+.contactForm textarea:hover {
+	border-color: #9ecaed;
+}
+.contactForm textarea {
+	width: 500px;
+	height: 100px;
+	padding: 10px;
+	text-align: left;
+	background: white;
+	border: 1px solid var(--dark-blue);
+	box-shadow: none;
+	font-size: 18px;
+	letter-spacing: 2px;
+	transition: all .25s;
+}
+.contactFormInputs {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	margin-bottom: 20px;
+}
+.contactBoxWrapper {
+	width: 100%;
+	height: 300px;
+}
+.contactBoxContainer {
+	height: 100%;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.contactBox div {
+	height: 25%;
+	width: 100%;
+	text-align: center;
+	line-height: 45px;
+	font-family: var(--p-font);
+	color: #4a4a4a;
+}
+.contactBox {
+	height: 180px;
+	padding: 20px 0;
+	width: 300px;
+	float: left;
+	box-shadow: 0 0 15px #969696;
+	position: relative;
+}
+.contactBox::after {
+	content: '';
+	height: 5px;
+	width: 100%;
+	background-color: var(--dark-blue);
+	position: absolute;
+	bottom: 0;
+	left: 0;
+}
+.apptName {
+	text-decoration: underline;
+}
+.contactWhitespace {
+	height: 100%;
+	width: 100px;
+}
+.separator {
+	width: 100%;
+	height: 75px;
+}
+.separatorMiami {
+	background: url("../images/miami-beach.jpg") 100% no-repeat;
+	background-size: 100%;
+	background-attachment: fixed;
+}
+.separatorNewyork {
+	background: url("../images/newyork.jpg") 100% no-repeat;
+	background-size: 100%;
+	background-attachment: fixed;
+}
+.separatorChicago {
+	background: url("../images/chicago.jpg") 100% no-repeat;
+	background-size: 100%;
+	background-attachment: fixed;
+}
+.separatorVegas {
+	background: url("../images/lasvegas.jpg") 100% no-repeat;
+	background-size: 100%;
+	background-attachment: fixed;
+}
+.separatorLosangeles {
+	background: url("../images/losangeles.jpg") 100% no-repeat;
+	background-size: 100%;
+	background-attachment: fixed;
+}
+.dots {
+	width: 300px;
+	height: 100%;
+	margin: 0 auto;
+	background: url("../images/dots.svg") 100% no-repeat;
+	background-size: 100% 100%;
+}
+/* FAQ */
+.faqPannel {
+	width: 100%;
+	position: relative;
+	background: url("../images/miami-beach-blur.png") 100% no-repeat;
+	background-size: 100%;
+	background-attachment: fixed;
+	padding-bottom: 100px;
+}
+.faqContainer {
+	width: 80%;
+	padding: 50px 0;
+	background: #ededed;
+	margin: 0 auto;
+}
+.faqList {
+	padding-left: 50px;
+	width: 90%;
+	margin: 0 auto;
+	margin-top: 50px;
+}
+.faqList li {
+	font-size: 30px;
+	font-family: var(--title-font);
+	letter-spacing: 2px;
+	font-weight: bold;
+}
+.faqList p {
+	padding-bottom: 40px;
+	padding-top: 20px;
+	padding-left: 20px;
+	font-size: 20px;
+	color: #707070;
+}
+/* login signup */
+.logSignModuleWrapper {
+	height: 550px;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	background: url("../images/miami-beach-blur.png") 100% no-repeat;
+	background-size: 100% 120%;
+	background-attachment: fixed;
+}
+.logSignModuleContiainer {
+	background-color: #FFF;
+	width: 400px;
+	height: 475px;
+	margin-top: 30px;
+	transition: all .4s ease;
+}
+.logSignButtonsContainer {
+	width: 100%;
+	display: flex;
+	text-align: center;
+	font-size: 20px;
+	line-height: 50px;
+	font-family: var(--p-font);
+	color: #FFF;
+	cursor: pointer;
+	max-height: 50px;
+}
+#loginModuleButton {
+	width: 50%;
+	height: 87%;
+}
+#signupModuleButton {
+	width: 50%;
+	height: 87%;
+}
+.focused {
+	background-color: #080261;
+	letter-spacing: 4px;
+	transition: all .5s ease;
+}
+.unfocused:hover {
+	letter-spacing: 3px;
+}
+.unfocused {
+	background-color: #080037;
+	letter-spacing: 2px;
+	transition: all .4s ease;
+}
+.logSignTitle {
+	text-align: center;
+	width: 100%;
+	padding: 10px 0;
+	font-size: 30px;
+	letter-spacing: 3px;
+	font-weight: bold;
+	font-family: var(--title-font);
+}
+#loginModule {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	width: 100%;
+	height: 425px;
+	background: white;
+	transition: all .4s ease;
+	animation: fadein .8s;
+}
+.loginForm {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+}
+.loginForm input[type=text], .loginForm input[type=password], .signupForm input[type=text], .signupForm input[type=password] {
+	width: 200px;
+	height: 30px;
+	font-size: 18px;
+	letter-spacing: 1px;
+	margin-top: 30px;
+	transition: all .25s;
+}
+.loginButton {
+	margin-top: 70px;
+}
+#signupModule {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	padding-top: 10px;
+	width: 100%;
+	height: 415px;
+	background: white;
+	transition: all .4s ease;
+	animation: fadein .8s;
+}
+.signupForm {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+}
+.signupFormInputs {
+	display: flex;
+	justify-content: center;
+}
+.signupForm input {
+	margin-left: 10px;
+}
+#mIni {
+	width: 25px;
+	text-align: center;
+	text-transform: uppercase;
+}
+.signupButton {
+	margin-top: 50px;
 }
 /* footer */
 footer {
@@ -259,12 +640,56 @@ footer {
    	-webkit-box-shadow: inset 0 0 10px #000000;
    	box-shadow: inset 0 0 10px #000000;
 }
+.footerContainer {
+	height: 100%;
+	width: 95%;
+	padding: 0 2.5%;
+	display: flex;
+	align-items: center;
+}
+.footerNav {
+	height: 100%;
+	width: 25%;
+	float: left;
+	display: flex;
+	align-items: flex-start;
+	justify-content: center;
+}
+footer ul {
+	float: left;
+	padding: 15px 15px;
+}
+footer ul li{
+	padding: 5px;
+	font-size: 12px;
+	font-family: var(--p-font);
+}
+footer ul li a:hover {
+	font-weight: bold;
+}
+footer ul li a {
+	color: #000;
+	text-decoration: underline;
+}
+.footerLogoWrapper {
+	float: left;
+	height: 100%;
+	width: 50%;
+	display: flex;
+	justify-content: center;
+}
 .footerLogo {
-	width: 120px;
-	height: 80px;
-	margin-left: 30px;
-	background: url("../images/LOGO.PNG") no-repeat 100%;
+	width: 150px;
+	height: 100%;
+	background: url("../images/LOGO.png") no-repeat 100%;
 	background-size: 100% 100%;
+}
+.footerContactInfoWrapper {
+	float: left;
+	height: 100%;
+	width: 25%;
+	display: flex;
+	justify-content: center;
 }
 /* Box Effect */
 .boxEffect {
@@ -282,7 +707,7 @@ footer {
 	left: 0;
   content: '';
   bottom: 0px;
-	background: #275cb2;
+	background: var(--dark-blue);
 	transition: .5s all;
 }
 .boxEffect:after {
@@ -293,7 +718,7 @@ footer {
   height: 0;
   content: '';
   bottom: 0px;
-	background: #275cb2;
+	background: var(--dark-blue);
 	transition: .5s all;
 }
 /* screen size adjustment */
@@ -317,11 +742,152 @@ footer {
 	}
 	.loginSignupButton {
 		font-size: 30px;
-		margin-left: 65%;
 	}
 	.loginDesc {
 		font-size: 20px;
 	}
+	.cityDesc {
+		padding: 20px;
+		max-width: 55%;
+		margin-top: 40px;
+	}
+	.cityInfoContainer {
+		height: 380px;
+	}
+	.contactForm {
+		padding-top: 0;
+	}
+	.contactFormPannel {
+		height: 550px;
+	}
+	.contactFormPannelBackground {
+		height: 625px;
+	}
+}
+/* Submit Button */
+.buttonContainer {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+}
+.signupButton {
+  outline: none;
+  height: 40px;
+  text-align: center;
+  width: 230px;
+  border-radius: 40px;
+  background: #fff;
+  border: 2px solid var(--green);
+  color: var(--green);
+  letter-spacing: 4px;
+  text-shadow: 0;
+	font-size: 16px;
+	font-weight: bold;
+	font-family: var(--p-font);
+  cursor: pointer;
+  transition: all 0.25s ease;
+}
+.signupButton:hover {
+  color: white;
+  background: var(--green);
+}
+.signupButton:active {
+  letter-spacing: 2px;
+}
+.signupButton:after {
+  content: "SIGN UP";
+}
+.loginButton {
+  outline: none;
+  height: 40px;
+  text-align: center;
+  width: 230px;
+  border-radius: 40px;
+  background: #fff;
+  border: 2px solid var(--green);
+  color: var(--green);
+  letter-spacing: 4px;
+  text-shadow: 0;
+	font-size: 16px;
+	font-weight: bold;
+	font-family: var(--p-font);
+  cursor: pointer;
+  transition: all 0.25s ease;
+}
+.loginButton:hover {
+  color: white;
+  background: var(--green);
+}
+.loginButton:active {
+  letter-spacing: 2px;
+}
+.loginButton:after {
+  content: "LOGIN";
+}
+.submitButton {
+  outline: none;
+  height: 40px;
+  text-align: center;
+  width: 230px;
+  border-radius: 40px;
+  background: #fff;
+  border: 2px solid var(--green);
+  color: var(--green);
+  letter-spacing: 4px;
+  text-shadow: 0;
+	font-size: 16px;
+	font-weight: bold;
+	font-family: var(--p-font);
+  cursor: pointer;
+  transition: all 0.25s ease;
+}
+.submitButton:hover {
+  color: white;
+  background: var(--green);
+}
+.submitButton:active {
+  letter-spacing: 2px;
+}
+.submitButton:after {
+  content: "SUBMIT";
+}
+.onclic {
+  width: 40px;
+  border-color: #bbb;
+  border-width: 3px;
+  font-size: 0;
+  border-left-color: var(--green);
+  animation: rotating 2s 0.25s linear infinite;
+}
+.onclic:after {
+	content:"";
+}
+.onclic:hover {
+	color:var(--green);
+	background: white;
+}
+.validate {
+	font-family: var(--p-font);
+  font-size:16px;
+	font-weight: 400;
+  color: white;
+  background: var(--green);
+}
+.validate:after {
+	content:"✓ MESSAGE SENT";
+}
+/* keyframes */
+@keyframes rotating {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
 /* Utilities */
 .noSelect {
@@ -330,6 +896,16 @@ footer {
   -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
+}
+.linkWrapper {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+}
+.linkContainer {
+	width: 100%;
+	height: 100%;
+	position: relative;
 }
 .link-spanner {
   position: absolute;
